# client-data-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  todolist
.github/workflows/: build.yml
src/country_age_analyses/: main.py
src/country_age_analyses/resources/output/: city_clients_dept_parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=01/: 4bff3ef836dd4f068121c38139227be2-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=02/: 4bff3ef836dd4f068121c38139227be2-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=03/: 4bff3ef836dd4f068121c38139227be2-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=04/: b41bdb0c31314da088393cf74a69b4d1-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=05/: b41bdb0c31314da088393cf74a69b4d1-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=06/: 4bff3ef836dd4f068121c38139227be2-0.parquet
src/country_age_analyses/resources/output/city_clients_dept_csv/department=07/: 4bff3ef836dd4f068121c38139227be2-0.parquet
src/country_age_analyses/scripts/: data_processing.py  io_utils.py  pipeline.py  utils.py
src/country_age_analyses/utils/: custom_logger.py  file_utils.py
tests/: test_data_processing.py  test_export_data.py  test_load_data.py  test_run_pipeline.py  test_utils.py
tests/resources/input/: invalid_city_zipcode.csv  invalid_separator.csv  valid_clients_bdd.csv
(+91 files in other folders)
