[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "country_age_analyses"
version = "0.1.0"
description = "Country age analysis package"
requires-python = ">=3.8"

dependencies = [
    "polars",
    "pandas",
    "pyspark",
    "pyarrow"
]
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
